1. 添加一个网页的预览页面 2. 优化地址获取